# datagate

./: Cagro.toml  Cargo.toml  LICENSE.md
crates/datagate-cli/: Cargo.toml
crates/datagate-file/: Cargo.toml
crates/datagate-mongo/: Cargo.toml
crates/datagate-sqlx/: Cargo.toml
