[workspace]
members = [
    "crates/datagate-core",
    "crates/datagate-sqlx",
    "crates/datagate-cli", "crates/datagate-mongo", "crates/datagate-file",
]

[workspace.package]
name = "datagate"
version = "0.1.0"
license = "AGPL-3.0-or-later"
repository = "https://github.com/souhailaS/datagate"
authors = ["Souhaila Serbout"]

